[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swift_redis"
version = "1.0"
description = "Pluggable client for easy and intuitive work with the Redis database in Python projects"
requires-python = ">=3.11"
dependencies = ["python-dotenv==1.0.1", "redis==6.4.0"]
