[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyluaredis"
version = "1.0.9"
authors = [
  {name = "Roman (MothScientist)", email = "moth.feedback@gmail.com"},
]
description = "Pluggable client for easy and intuitive work with the Redis database in Python projects"
readme = "README.md"
license = "MIT"
dependencies = [
    "redis==6.4.0"
]
requires-python = ">=3.11"
keywords = ["redis", "lua", "PnP"]
classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Natural Language :: English",

    "Programming Language :: Python",
    "Programming Language :: Lua",

    "Operating System :: Unix",
    "Operating System :: Microsoft",

    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Repository = "https://github.com/MothScientist/pylua-redis-fusion"
Issues = "https://github.com/MothScientist/pylua-redis-fusion/issues"

[tool.setuptools]
packages = ["pyluaredis"]

[tool.setuptools.package-data]
pyluaredis = ["lua_scripts/*.lua"]

[tool.setuptools.exclude-package-data]
"*" = [
    "*.env",
    ".env*",
    "**/.env*",
    "**/*.env"
]